@@ -1,0 +1,25 @@
+#----------------------------------------------------------------------------
+#       Make Workspace
+#
+# $Id$
+#
+# This file was generated by MPC.  Any changes made directly to
+# this file will be lost the next time it is generated.
+#
+# MPC Command:
+# /tao_builds/chad/ocitao/ACE_wrappers/build/linux/bin/mwc.pl -include config -type make mixed_languages.mwc
+#
+#----------------------------------------------------------------------------
+
+
+all: csharp
+
+clean depend generated realclean $(CUSTOM_TARGETS):
+	@$(MAKE) -f Makefile.csharp $(@)
+
+.PHONY: csharp
+csharp:
+	@$(MAKE) -f Makefile.csharp generated all
+
+project_name_list:
+	@echo csharp
