@@ -2,12 +2,12 @@ project(csharp) {
   sharedname = foofooc
   Source_Files {
     subtype = Form
-    conditional(vc7, vc71, vc8) {
+    conditional(make, vc7, vc71, vc8, vc9) {
       floop.cs
     }
   }
   Source_Files {
-    conditional(vc7, vc71, vc8) {
+    conditional(make, vc7, vc71, vc8, vc9) {
       floop.Designer.cs
     }
   }
